--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,6 +14,13 @@
         <item name="colorOnSurface">@color/text_primary</item>
         <item name="colorBackground">@color/background_light</item>
         <item name="colorOnBackground">@color/text_primary</item>
+        <item name="colorSurfaceVariant">@color/background_light</item>
+        <item name="colorSurfaceContainer">@color/background_light</item>
+        <item name="colorSurfaceContainerHigh">@color/background_light</item>
+        <item name="colorSurfaceContainerHighest">@color/background_light</item>
+        
+        <!-- Window background -->
+        <item name="android:windowBackground">@color/background_light</item>
         
         <!-- Status bar -->
         <item name="android:statusBarColor">@android:color/transparent</item>
