--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -12,7 +12,7 @@
         <item name="colorOnError">@color/text_primary_dark</item>
         <item name="colorSurface">@color/background_light</item>
         <item name="colorOnSurface">@color/text_primary_dark</item>
-        <item name="colorBackground">@color/background_light</item>
+        <item name="android:colorBackground">@color/background_light</item>
         <item name="colorOnBackground">@color/text_primary_dark</item>
         <item name="colorSurfaceVariant">@color/background_light</item>
         <item name="colorSurfaceContainer">@color/background_light</item>
@@ -25,6 +25,11 @@
         <!-- Status bar -->
         <item name="android:statusBarColor">@android:color/transparent</item>
         <item name="android:windowLightStatusBar">false</item>
+
+        <!-- Custom attributes -->
+        <item name="colorSuccess">@color/success</item>
+        <item name="colorWarning">@color/warning</item>
+        <item name="colorInfo">@color/info_blue</item>
     </style>
 
     <!-- Splash Screen Theme - Dark Mode -->
